--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@ body{
 
     color:green;/*cor da fonte*/
     background-color:rgb(255, 255, 255);/*corde fundo*/
-
+    font-size: 24px;         /*tamanho da fonte*/
 }
