--- a/style.css
+++ b/style.css
@@ -6,5 +6,5 @@ body{
 }
 header{
 
-    border: solid 2px black; /*borda solida de px preta*/
+    border: solid 2px rgb(rgb(0, 255, 76), green, blue); /*borda solida de px preta*/
 }
