--- a/style.css
+++ b/style.css
@@ -6,5 +6,7 @@ body{
 }
 header{
 
-    border: solid 2px rgb(rgb(0, 255, 76), green, blue); /*borda solida de px preta*/
+    border-bottom: solid 2px rgb(rgb(0, 255, 76), green, blue); /*borda solida de px preta*/
+    padding: 20px;          /*espacamento interno*/
+    font-size: 32px;        /*tamanho da fonte*/
 }
