--- a/style.css
+++ b/style.css
@@ -9,4 +9,5 @@ header{
     border-bottom: solid 2px rgb(rgb(0, 255, 76), green, blue); /*borda solida de px preta*/
     padding: 20px;          /*espacamento interno*/
     font-size: 32px;        /*tamanho da fonte*/
+    color:rgb(rgb(17, 0, 255), green, blue)
 }
